--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="cssFileGenius.css">
 </head>
 <body> 
-
-
 <!-- portfolio -->
     <div id="Menu">
         <div class="Menu-all">
@@ -83,9 +81,8 @@
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
     </div>
 </header>
-
 <!-- section Home 1 -->
-<section class="HomeFirstSection" style="background-color: #00bdff;">
+<section class="HomeFirstSection" style="background-color: #333dcf;">
     <div class="serceles hidden">
         <div class="cercle1">
             <div class="cercle2"></div>
@@ -98,7 +95,7 @@
                 <h2>Genius Center Prive</h2>
             </div>
             <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
-            <button style=" background-color: #d5d5d5" class="GcpButton">NOS CLASSES</button>
+            <button class="GcpButton">NOS CLASSES</button>
         </div>
     </div>
 <!-- share bar social on first section -->
@@ -110,7 +107,6 @@
         <i style="cursor: pointer;" class="fa-brands fa-instagram"></i>
     </div>
 </section>
-
 <!-- Un métier, un article -->
 <section class="metierArticle">
     <div class="svgsec hidden">
@@ -120,7 +116,6 @@
     </svg>Un métier, un article</h2>
     </div>
 </section>
-
 <!-- 3 divs de qualité -->
 <section class="divProSuivi hidden">
     <div>
@@ -139,7 +134,6 @@
         <p style="text-align: center; ">La qualité professionnelle de cette formation réside dans son engagement à fournir une expertise approfondie, permettant aux apprenants de maîtriser les subtilités de la gestion logistique moderne.</p>
     </div>
 </section>
-
 <!-- 3 divs galery -->
 <div class="galleryDiv hidden">
     <i class="fa-regular fa-images"></i>
@@ -159,33 +153,6 @@
         <div  alt="5" class="item item5"></div>
     </div>
 </div>
-
-<!-- location section -->
-<section class="mapsvlleSection">
-    <h2>Notre Localisation</h2>
-        <div class="buttonVilles"  onclick="chngMaps(event)">
-            <button id="CASABlANCA"  adressNom="Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca"    class="Mapsbutton active"    data-map-url="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">CasaBlanca</button>
-            <button id="TANGER"      adressNom=""   class="Mapsbutton" >TANGER</button>
-            <button id="FES"         adressNom="Al-Atlas, rue Al-Zarqtouni, bâtiment n° 19, bureau n° 2"   class="Mapsbutton" >FES</button>
-            <button id="MEKNAS"      adressNom="AV ALLAL BEN ABDELLAH ESPACE AL MOUSTAKBAL MEKNES"   class="Mapsbutton" >MEKNAS</button>
-            <button id="MOHAMMEDIA"  adressNom="AL WAHDA AL ALIA RISIDENCE JAMILA 2 EME ETAGE"   class="Mapsbutton" >MOHAMMEDIA</button>
-            <button id="AL JADIDA"   adressNom="PLACE EL HANSALI CENTRE VILLE EL JADIDA RISIDENCE IBN ZAROUAL 3 EME ETAGE N 53"   class="Mapsbutton" >AL JADIDA</button>
-            <button id="MARRAKECH"   adressNom="HAY MOHAMMADI DAOUDIAT RESIDENCE THOURIYA 3 EME ETAGE N 9"   class="Mapsbutton" >MARRAKECH</button>
-            <button id="AGADIR"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"     class="Mapsbutton" >AGADIR</button>
-            <button id="BERCHID"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"     class="Mapsbutton" >BERCHID</button>
-        </div>
-        <div class="locationEtVilleInfo" style="border: none;">
-            <div class="Localistionchoisi">
-                <iframe class="framMaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div class="warningAndlocalinfo" id="warningAndlocalinfo">
-                    <h3  class="villeNomMaps" >CASABlANCA</h3>
-                    <p  class="adressMaps" >Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca</p>
-            </div>
-            <i class="fa-solid fa-city" style="width: 100px;"></i>
-        </div>
-</section>
-
 <!-- review -->
 <section class="reviewsSec hidden">
     <i class="fa-regular fa-star iOfreview"></i>
@@ -209,11 +176,6 @@
 
     </div>    
 </section>
-<style>
-
-
-</style>
-
 <!-- section3 Articels-->
 <section class="sectionArticles hidden">
     <div class="titlegalry articl">
@@ -253,7 +215,6 @@
         </div>
     </div>
 </section>
-
 <!-- have a question div -->
 <section class="havequesitonsection hidden" id="contactSec">
     <div class="layer">
@@ -263,6 +224,31 @@
         <h3> <span>APPELER:</span> 08 08 6435 73</h3>
         <button>PURCHASE NOW</button>
     </div>
+</section>
+<!-- location section -->
+<section class="mapsvlleSection">
+    <h2>Notre Localisation</h2>
+        <div class="buttonVilles"  onclick="chngMaps(event)">
+            <button id="CASABlANCA"  adressNom="Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca"    class="Mapsbutton active"  data-map-url="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d587.4577497450044!2d-7.513681356192121!3d33.60107840211382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDM2JzAzLjgiTiA3wrAzMCc0Ny42Ilc!5e0!3m2!1sfr!2sma!4v1708269707701!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">CasaBlanca</button>
+            <button id="TANGER"      adressNom="AV DRISSIA EN FACE DU CENTRE COMMERCIAL AL BOUHOUT"  data-map-url="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d521.5977574327143!2d-5.802355580253234!3d35.75933329642098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1708269446489!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="Mapsbutton" >TANGER</button>
+            <button id="FES"         adressNom="Al-Atlas, rue Al-Zarqtouni, bâtiment n° 19, bureau n° 2"  data-map-url="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d292.24154575956726!2d-4.996501155484221!3d34.03525991258704!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd9f8b474a9015e7%3A0xfab8d85b0db0c762!2sAv.%20Mohammed%20Zerktouni%2C%20F%C3%A8s%2030050!5e0!3m2!1sfr!2sma!4v1708269598962!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="Mapsbutton" >FES</button>
+            <button id="MEKNAS"      adressNom="AV ALLAL BEN ABDELLAH ESPACE AL MOUSTAKBAL MEKNES"   class="Mapsbutton" >MEKNAS</button>
+            <button id="MOHAMMEDIA"  adressNom="AL WAHDA AL ALIA RISIDENCE JAMILA 2 EME ETAGE"  data-map-url="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d455.83710596121875!2d-7.385125988931408!3d33.68363419765818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDQxJzAxLjIiTiA3wrAyMycwNi42Ilc!5e0!3m2!1sfr!2sma!4v1708269894704!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="Mapsbutton" >MOHAMMEDIA</button>
+            <button id="AL JADIDA"   adressNom="PLACE EL HANSALI CENTRE VILLE EL JADIDA RISIDENCE IBN ZAROUAL 3 EME ETAGE N 53" data-map-url="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1179.6344860909237!2d-8.504125199028376!3d33.253133600405306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDE1JzExLjUiTiA4wrAzMCcxMS41Ilc!5e0!3m2!1sfr!2sma!4v1708268983020!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  class="Mapsbutton" >AL JADIDA</button>
+            <button id="MARRAKECH"   adressNom="HAY MOHAMMADI DAOUDIAT RESIDENCE THOURIYA 3 EME ETAGE N 9" data-map-url="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d699.0711556941094!2d-7.990831831879439!3d31.657565845360832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzHCsDM5JzI3LjgiTiA3wrA1OScyNS45Ilc!5e0!3m2!1sfr!2sma!4v1708270062304!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  class="Mapsbutton" >MARRAKECH</button>
+            <button id="AGADIR"      adressNom="Quartier Al-Salam, rue Anzi, à proximité de la résidence universitaire, à côté du restaurant Timitar"   data-map-url="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3441.2907969356115!2d-9.549204824432591!3d30.39949037474678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzDCsDIzJzU4LjIiTiA5wrAzMic0Ny45Ilc!5e0!3m2!1sfr!2sma!4v1708270144064!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  class="Mapsbutton" >AGADIR</button>
+            <button id="BERCHID"      adressNom="GROUPE SCOLAIRE TAYSSIR NAZIK MALAIKA10 PRET DU COLLEGE IBN KHALDOUN"   data-map-url="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d584.7402780528786!2d-7.579496897288838!3d33.27246188715418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDE2JzIwLjYiTiA3wrAzNCc0NS4xIlc!5e0!3m2!1sfr!2sma!4v1708271489499!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"   class="Mapsbutton" >BERCHID</button>
+        </div>
+        <div class="locationEtVilleInfo" style="border: none;">
+            <div class="Localistionchoisi">
+                <iframe class="framMaps" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6660.073313634736!2d-7.649244586883114!3d33.422288657303504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sfr!2sma!4v1707762213468!5m2!1sfr!2sma"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="warningAndlocalinfo" id="warningAndlocalinfo">
+                    <h3  class="villeNomMaps" >CASABlANCA</h3>
+                    <p  class="adressMaps" >Al firdaous imm 2 2ème étage n 14 ain sbaa- bernoussi casablanca</p>
+            </div>
+            <i class="fa-solid fa-city" style="width: 100px;"></i>
+        </div>
 </section>
 <!-- footer -->
 <footer>
@@ -294,12 +280,6 @@
         </div>
     </div>
 </footer>
-
-
-
-
-
-
 <script src="GeniusJS.js"></script>
 </body>
 </html>
