--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <footer>
     <div class="Contentfooter hidden">
         <div class="smallContent">
-            <img src="./assets/logon.png">
+            <img src="./assets/GCCHARIOT.png" alt="">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
