--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" href="./assets/WhatsApp Image 2024-01-25 à 21.22.33_058732ec.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <title>Site Genius Center</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
