--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <title>Site Genius Center</title>
+    <title>Genius Center</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
@@ -274,7 +274,7 @@
         </div>
 
         <div class="smallContent">
-            <h1>Working Hours</h1>
+            <h1>Heures de travail</h1>
             <p style="font-weight: bold;">lundi - Samedi</p>
             <p>9:00am - 21:00pm</p>
             <p style="font-weight: bold;">Dimanche</p>
