--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="ReviewInfo">
                     <img src="./assets/iOfreview.png" alt="">
                     <p style="font-style: italic;">"La formation logistique a dépassé toutes mes attentes ! Les instructeurs étaient extrêmement compétents et engageants. J'ai acquis des compétences précieuses qui ont déjà eu un impact positif sur ma carrière. Je recommande vivement cette formation à tous ceux qui souhaitent exceller dans le domaine de la logistique , Merci le groupe GCP ."</p>
-                    <h3>MR Ahmed Sami - CasaBlanca</h3>
+                    <h3>MR Ahmed Sami<span style="color: #f77500;"> - </span>CasaBlanca</h3>
                     <p>Client</p>
                     <i class="fa-regular fa-star iOfreview2"></i>
             </div>
