--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="cssFileGenius.css?v=<?php echo filemtime('cssFileGenius.css'); ?>">
+    <link rel="stylesheet" type="text/css" href="cssFileGenius.css?v=?php echo filemtime('cssFileGenius.css'); ?>">
     <!-- <link rel="stylesheet" href="cssFileGenius.css"> -->
 </head>
 <body> 
@@ -62,6 +62,7 @@
                     <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Services</a>
+                    <a href="#">Formation Digital</a>
                     <a href="#contactSec">Contact</a>
                 </li>
              </ul>
@@ -74,6 +75,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Services</a>
+        <a href="formationDigital.html">Formation Digital</a>
         <a href="#contactSec">Contact</a>
     </nav>
     
