--- a/espaceEtudiant2.html
+++ b/espaceEtudiant2.html
@@ -14,12 +14,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></head>
 <body>
     <header>
-        <i class="fa-solid fa-square-poll-horizontal" id="afficheMenuPhone"></i>
-        <ul>
-            <li>mon espace</li>
-            <li>contacter nous</li>
-        </ul>
-        <img src="assets/logon.png" alt="">
+        <div>
+            <i class="fa-solid fa-square-poll-horizontal" id="afficheMenuPhone"></i>
+            <ul>
+                <li>mon espace</li>
+                <li>contacter nous</li>
+            </ul>
+            <img src="assets/logon.png" alt="">
+        </div>
     </header>
 
     <!-- menuphone -->
@@ -30,9 +32,19 @@
             <li>contacter nous</li>
         </ul>
     </div>
-    
-    <section>
 
+    <section class="secHeadimg ">
+        <div class="secheadDiv1 ">
+            <h2>Chariot élévateur</h2>
+            <p>Lorem, ipsum Lorem, ipsum.</p>
+        </div>
+        <div class="Headimg">
+            <img src="assets/medium-shot-smiley-man-warehouse.jpg" alt="">
+            <div class="overlayH"></div>
+        </div>
+    </section>
+
+    <section>
         <div class="div1">
             <div>
                 <i class="fa-solid fa-user"></i>
@@ -45,6 +57,10 @@
             <div>
                 <i class="fa-solid fa-location-dot"></i>
                 <p class="ville">Rabat</p>
+            </div>
+            <div>
+                <i class="fa-solid fa-location-dot"></i>
+                <p class="ville">Chariot elevateur</p>
             </div>
         </div>
         </div>
@@ -77,7 +93,7 @@
 
 </section>
         
-<footer class="p-3 py-5 bg-secondary">
+<footer class="">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, error!</p>
 </footer>
 
@@ -94,12 +110,13 @@
    VrblMenuAfficheButton.addEventListener("click",FuntionafficheMn);
 
     function FuntionafficheMn() {
-        if ( reelPhoneMenu.style.display === "none"  ) {
+        if ( reelPhoneMenu.style.display === "none" ||  reelPhoneMenu.style.display === "") {
             reelPhoneMenu.style.display = "flex";
+            VrblMenuAfficheButton.style.rotate = "90deg";
             console.log("fdf")
         } else {
             reelPhoneMenu.style.display = "none";
-
+            VrblMenuAfficheButton.style.rotate = "0deg";
         }
  
     };
