--- a/espaceEtudiant2.html
+++ b/espaceEtudiant2.html
@@ -93,8 +93,15 @@
 
 </section>
         
-<footer class="">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, error!</p>
+<footer class="d-flex align-items-start justify-content-between">
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, error!</p>
+    </div>
+    <div>
+        <p>Contact@geniuscenterprive.com</p>
+        <p>06 75 83 33 22</p>
+        <p>06 75 83 33 22</p>
+    </div>
 </footer>
 
 
