--- a/espaceEtudiant2.html
+++ b/espaceEtudiant2.html
@@ -75,19 +75,34 @@
             </div>
 
              <div class="card">
-                <h2>Lorem, ipsum.</h2>
+                <div class="background-overlay">
+                    <h2>Chariot élévateur</h2>
+                <p>Lorem, ipsum.</p>
+                </div>
             </div>
              <div class="card">
-                <h2>Lorem, ipsum.</h2>
+                <div class="background-overlay">
+                    <h2>Chariot élévateur</h2>
+                <p>Lorem, ipsum.</p>
+                </div>
             </div>
              <div class="card">
-                <h2>Lorem, ipsum.</h2>
+                <div class="background-overlay">
+                    <h2>Chariot élévateur</h2>
+                <p>Lorem, ipsum.</p>
+            </div>
             </div>
              <div class="card">
-                <h2>Lorem, ipsum.</h2>
+                <div class="background-overlay">
+                    <h2>Chariot élévateur</h2>
+                <p>Lorem, ipsum.</p>
+            </div>
             </div>
              <div class="card">
-                <h2>Lorem, ipsum.</h2>
+                <div class="background-overlay">
+                    <h2>Chariot élévateur</h2>
+                <p>Lorem, ipsum.</p>
+            </div>
             </div>
     </div>
 
