--- a/espaceEtudiant2.html
+++ b/espaceEtudiant2.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-             <div class="card">
+             <div class="card cd2">
                 <div class="background-overlay">
                     <h2>Chariot élévateur</h2>
                 <p>Lorem, ipsum.</p>
