--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -97,7 +97,8 @@
       if (inputcheckVar.checked == true) {
         inputPass.getAttributeNode("type").value = "text";
       } else {
-        inputPass.getAttributeNode("type").value = "password";
+        inputPass.getAttributeNode("type").value = "password"; 
+        console.log('shwpss')
       }
     }
 
