--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -39,6 +39,7 @@
       font-weight: bold;
       background-color: transparent;
       border-bottom: 2px solid black;
+      border-radius: 0;
     }
     input:focus {
       outline: 0;
