--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <style>
-    
+    * {
+      /* border: 1px solid gray; */
+    }
     body {
       height: 100vh;
     }
@@ -28,6 +30,10 @@
       }
       form {
         padding: 10px;
+        box-shadow: 0 0 30px 20px rgba(128, 128, 128, 0.525);
+        /* background-color: rgb(255, 255, 255); */
+        /* height: 20%; */
+        min-height: fit-content;
       }
     }
     button {
