--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -33,7 +33,8 @@
         box-shadow: 0 0 30px 20px rgba(128, 128, 128, 0.525);
         /* background-color: rgb(255, 255, 255); */
         /* height: 20%; */
-        min-height: fit-content;
+        /* min-height: fit-content; */
+        /* margin:0px 30px; */
       }
     }
     button {
@@ -70,7 +71,7 @@
 
             <div class="container  d-flex align-items-center justify-content-center col-lg-8 formLg">
 
-                <form id="loginForm" class="row  p-md-5 " >
+                <form id="loginForm" class="row m-2 py-5 p-md-5 " >
                     <h2 class="text-center pb-5">Indiquez votre compte</h2>
                     <label for="username" class="fw-bold">N* Telephone :</label>
                     <input type="number" id="username" name="username" placeholder="entrer votre numero de telephone" class="p-3 my-3 mt-0" required>
