--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -25,6 +25,9 @@
       height: 100vh;
     }
     @media (max-width:992px) {
+      body {
+        overflow: hidden;
+      }
       .FirstNes {
         display: none;
       }
