--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -38,7 +38,7 @@
         /* height: 20%; */
         /* min-height: fit-content; */
         /* margin:0px 30px; */
-        aspect-ratio: 1/1;
+        /* aspect-ratio: 1/1; */
       }
       form h2 {
         font-size: 20px;
@@ -81,7 +81,7 @@
                 <form id="loginForm" class="row m-2 py-5 p-md-5 " >
                     <h2 class="text-center pb-3">Indiquez votre compte</h2>
                     <label for="username" class="fw-bold">N* Telephone :</label>
-                    <input type="number" id="username" name="username" placeholder="entrer votre numero de telephone" class="p-3 my-3 mt-0" required>
+                    <input type="number" id="username" name="username" placeholder="entrer votre numero de telephone" class=" p-3 my-3 mt-0" required>
                     
                     <label for="password" class="fw-bold pt-5">Password :</label>
                     <div class="row d-flex align-items-center p-0 m-0">
@@ -89,7 +89,7 @@
                         <input type="checkbox" name="" id="showPassWord" class="p-2 col-1">
                     </div>
                     
-                    <button type="button" onclick="validateForm()" class="mt-4 py-2 border-primary fw-bold text-primary fs-5">Login</button>
+                    <button type="button" onclick="validateForm()" class="m-3 col py-2 border-primary fw-bold text-primary fs-5">Login</button>
                     <p id="error-message"></p>
                 </form>
             </div>
