--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -33,7 +33,7 @@
       }
       form {
         padding: 10px;
-        box-shadow: 0 0 30px 20px rgba(128, 128, 128, 0.525);
+        box-shadow: 0 0 30px 20px rgba(212, 210, 210, 0.525);
         /* background-color: rgb(255, 255, 255); */
         /* height: 20%; */
         /* min-height: fit-content; */
@@ -89,7 +89,7 @@
                         <input type="checkbox" name="" id="showPassWord" class="p-2 col-1">
                     </div>
                     
-                    <button type="button" onclick="validateForm()" class="m-3 col py-2 border-primary fw-bold text-primary fs-5">Login</button>
+                    <button type="button" onclick="validateForm()" class="m-3 bg-primary text-white col py-1 fw-bold text-primary fs-5">Login</button>
                     <p id="error-message"></p>
                 </form>
             </div>
