--- a/espaceetudiant.html
+++ b/espaceetudiant.html
@@ -25,28 +25,16 @@
       height: 100vh;
     }
     @media (max-width:992px) {
-      /* body {
-        overflow: hidden;
-      } */
       .FirstNes {
         display: none;
       }
       form {
         padding: 10px;
         box-shadow: 0 0 30px 20px rgba(212, 210, 210, 0.525);
-        /* background-color: rgb(255, 255, 255); */
-        /* height: 20%; */
-        /* min-height: fit-content; */
-        /* margin:0px 30px; */
-        /* aspect-ratio: 1/1; */
       }
       form h2 {
         font-size: 20px;
       }
-    }
-    button {
-      border: 3px solid   ;
-
     }
     input {
       border: 0;
@@ -58,6 +46,10 @@
     input:focus {
       outline: 0;
       border: 0;
+    }
+    input[type="checkbox"] {
+      height: 20px;
+      color: #000000;
     }
 
   </style>
@@ -89,7 +81,7 @@
                         <input type="checkbox" name="" id="showPassWord" class="p-2 col-1">
                     </div>
                     
-                    <button type="button" onclick="validateForm()" class="m-3 bg-primary text-white col py-1 fw-bold text-primary fs-5">Login</button>
+                    <button type="button" onclick="validateForm()" class="m-3 bg-primary text-white col py-2 border-0 text-primary fs-5">Login</button>
                     <p id="error-message"></p>
                 </form>
             </div>
