--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h2>Genius Center Prive</h2>
             </div>
             <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
-            <button class="GcpButton">NOS CLASSES</button>
+            <a href="registr.html"><button class="GcpButton">Inscrivez-vous maintenant</button></a>
         </div>
     </div>
 <!-- share bar social on first section -->
