--- a/registr.html
+++ b/registr.html
@@ -17,8 +17,8 @@
             box-sizing: border-box;
         }
         .sercle {
-            width: 30px;
-            height: 30px;
+            width: 28px;
+            height: 28px;
             border-radius: 50%;
             margin: auto;
         }
@@ -31,48 +31,52 @@
             }
        
         }
+        label span {
+            /* font-size: small; */
+        }
  
     </style>
 </head>
 <body>
 
-<div class="bg-white  row ">
-    <div class=" col-md-6 p-md-3 py-1 container d-flex align-items-center justify-content-around">
+<!-- <div class="bg-white  row  "> -->
+    <div class=" col-md-6 p-md-3 py-1 container d-flex align-items-center justify-content-around ">
         <div class="text-center">
-            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center fs-3"><i class="fa-solid fa-spinner text-center m-0 p-0"></i></p>
+            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-spinner text-center m-0 p-0"></i></p>
             <p class="m-0" >en cours</p>
         </div>
         <div class="text-center">
-            <p class="sercle bg-success text-white fw-bold d-flex align-items-center justify-content-center fs-3"><i class="fa-solid fa-check text-center m-0 p-0"></i></p>
+            <p class="sercle bg-success text-white fw-bold d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-check text-center m-0 p-0"></i></p>
             <p class="m-0" >vérification</p>
         </div>
     </div>
-</div>
+<!-- </div> -->
+
 <div class="container d-flex align-items-center justify-content-center ">
     <div class="col-md-12 d-flex align-items-center justify-content-center ">
         <div class="row p-3 bg-primary d-flex align-items-center justify-content-center">
                 <h2 class="text-center my-3 mb-5">Remplissez le formulaire suivant</h2>
             <form action="" class=" row col-md-7">
-                <label for="" class="text-align-start pb-2 p-0">Nom complet</label>
+                <label for="" class="text-align-start pb-2 p-0  text-white fw-bold">Nom complet</label>
                 <input type="text" name="" id="" class="border-0 p-2 mb-4 mb-md-4" placeholder="Entrez votre nom complet">
 
-                <label for="" class="pb-2 p-0 text-capitalize">numéro de telephone</label>
+                <label for="" class="pb-2 p-0 text-capitalize  text-white fw-bold">numéro de telephone</label>
                 <input type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="Entrez votre Numéro de téléphone">
 
-                <label for="" class="pb-2 p-0">ville de résidence</label>
+                <label for="" class="pb-2 p-0   text-white fw-bold">Ville de résidence</label>
                 <input type="number" name="" id="" class="border-0 p-2 mb-4" placeholder="Entrez votre ville de résidence">
                 
-                <label for="" class="pb-2 p-0">Formation souhaitée <span class="text-white fw-bold">choisis votre formation souhaitée</span> </label>
+                <label for="" class="pb-2 p-0 text-white fw-bold">Formation souhaitée <span class="text-dark">choisis votre formation souhaitée</span> </label>
                 <!-- <input type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="choisis votre formation souhaitée"> -->
                 <select name="" id=""  class="border-0 p-2 mb-3 ">
                     <option value="" class="11">Opt1</option>
-                    <option value="" class="21">Opt1</option>
-                    <option value="" class="31">Opt1</option>
-                    <option value="" class="41">Opt1</option>
+                    <option value="" class="21">Opt 2</option>
+                    <option value="" class="31">Opt 3</option>
+                    <option value="" class="41">Opt 5</option>
                     <option value="" class="51">Opt1</option>
                 </select>
 
-                <button class="border-0 py-3 text-white bg-dark my-3 fw-bold fs-5" type="submit">Inscrire maintenant</button>
+                <button class="border-0 py-3 mt-4 text-white bg-dark my-3 fw-bold fs-5" type="submit">Inscrire maintenant</button>
             </form>
         </div>
     </div>
