--- a/registr.html
+++ b/registr.html
@@ -30,19 +30,27 @@
                 font-size: 20px;
             }
        
+        }        
+        @keyframes progess {
+            0% {   rotate: 0deg;   }
+            16% {   rotate: 72deg;   }
+            32% {   rotate: 144deg;   }
+            32% {   rotate: 216deg;   }
+            48% {   rotate: 288deg;   }
+            100% {   rotate: 360deg;   }
+            /* 80% {   rotate: 72deg;   } */
         }
-        label span {
-            /* font-size: small; */
-        }
- 
-    </style>
+        .serclAnim{
+            animation: progess 5s alternate infinite ease;
+        }    
+</style>
 </head>
 <body>
 
 <!-- <div class="bg-white  row  "> -->
     <div class=" col-md-6 p-md-3 py-1 container d-flex align-items-center justify-content-around ">
         <div class="text-center">
-            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-spinner text-center m-0 p-0"></i></p>
+            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-spinner serclAnim text-center m-0 p-0"></i></p>
             <p class="m-0" >en cours</p>
         </div>
         <div class="text-center">
