--- a/registr.html
+++ b/registr.html
@@ -42,6 +42,10 @@
         }
         .serclAnim{
             animation: progess 5s alternate infinite ease;
+        }
+        .inscrBtn {
+            background: rgb(0,0,0);
+            background: linear-gradient(90deg, rgba(0,0,0,0.9360994397759104) 38%, rgb(63, 62, 62) 90%);
         }    
 </style>
 </head>
@@ -84,7 +88,7 @@
                     <option value="" class="51">Opt1</option>
                 </select>
 
-                <button class="border-0 py-3 mt-4 text-white bg-dark my-3 fw-bold fs-5" type="submit">Inscrire maintenant</button>
+                <button class="inscrBtn border-0 py-3 mt-4 text-white my-3 fw-bold fs-5" type="submit">Inscrire maintenant</button>
             </form>
         </div>
     </div>
