--- a/registr.html
+++ b/registr.html
@@ -46,7 +46,10 @@
         .inscrBtn {
             background: rgb(0,0,0);
             background: linear-gradient(90deg, rgba(0,0,0,0.9360994397759104) 38%, rgb(63, 62, 62) 90%);
-        }    
+        } 
+        input {
+            border-radius: 0;
+        }   
 </style>
 </head>
 <body>
