--- a/registr.html
+++ b/registr.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         *{
-            /* border: 1px solid gray; */
+            /* border: 1px solid red; */
             padding: 0;
             margin: 0;
             box-sizing: border-box;
@@ -27,7 +27,7 @@
         }
         @media (max-width:600px) {
             h2 {
-                font-size: 20px;
+                font-size: 22px;
             }
        
         }        
@@ -35,29 +35,31 @@
             0% {   rotate: 0deg;   }
             16% {   rotate: 72deg;   }
             32% {   rotate: 144deg;   }
-            32% {   rotate: 216deg;   }
-            48% {   rotate: 288deg;   }
+            48% {   rotate: 216deg;   }
+            64% {   rotate: 288deg;   }
             100% {   rotate: 360deg;   }
             /* 80% {   rotate: 72deg;   } */
         }
         .serclAnim{
-            animation: progess 5s alternate infinite ease;
+            animation: progess 5s normal infinite ease;
         }
         .inscrBtn {
             background: rgb(0,0,0);
             background: linear-gradient(90deg, rgba(0,0,0,0.9360994397759104) 38%, rgb(63, 62, 62) 90%);
+        }
+        .PersonHr {
+            height: 4px;
+            z-index: -2;
         } 
-        input {
-            border-radius: 0;
-        }   
 </style>
 </head>
 <body>
 
 <!-- <div class="bg-white  row  "> -->
     <div class=" col-md-6 p-md-3 py-1 container d-flex align-items-center justify-content-around ">
-        <div class="text-center">
-            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-spinner serclAnim text-center m-0 p-0"></i></p>
+        <div class="PersonHr bg-secondary vw-100 position-absolute mb-3 z-n1"></div>
+        <div class="text-center z-3">
+            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center z-3 fs-5"><i class="fa-solid fa-spinner  serclAnim text-center p-0"></i></p>
             <p class="m-0" >en cours</p>
         </div>
         <div class="text-center">
