--- a/registr.html
+++ b/registr.html
@@ -22,6 +22,11 @@
             border-radius: 50%;
             margin: auto;
         }
+        .crclstp2 {
+            width: 35px;
+            height: 35px;
+            
+        }
         h2 {
             font-size: 25px;
         }
@@ -48,7 +53,7 @@
             background: linear-gradient(90deg, rgba(0,0,0,0.9360994397759104) 38%, rgb(63, 62, 62) 90%);
         }
         .PersonHr {
-            height: 4px;
+            height: 5px;
             z-index: -2;
         } 
 </style>
@@ -57,13 +62,19 @@
 
 <!-- <div class="bg-white  row  "> -->
     <div class=" col-md-6 p-md-3 py-1 container d-flex align-items-center justify-content-around ">
-        <div class="PersonHr bg-secondary vw-100 position-absolute mb-3 z-n1"></div>
-        <div class="text-center z-3">
-            <p class="sercle bg-primary fw-bold text-white d-flex align-items-center justify-content-center z-3 fs-5"><i class="fa-solid fa-spinner  serclAnim text-center p-0"></i></p>
+        <div class="PersonHr bg-dark vw-100 position-absolute mb-4 z-n1"></div>
+
+        <div class="text-center  z-3">
+            <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-dark">
+                <p class="sercle bg-primary fw-bold text-white  d-flex align-items-center justify-content-center  fs-5"><i class="fa-solid fa-spinner  serclAnim text-center m-0 p-0"></i></p>
+            </div>
             <p class="m-0" >en cours</p>
         </div>
+
         <div class="text-center">
-            <p class="sercle bg-success text-white fw-bold d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-check text-center m-0 p-0"></i></p>
+            <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-dark">
+                <p class="sercle bg-success text-white fw-bold d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-check text-center m-0 p-0"></i></p>
+            </div>
             <p class="m-0" >vérification</p>
         </div>
     </div>
