--- a/registr.html
+++ b/registr.html
@@ -25,7 +25,8 @@
         .crclstp2 {
             width: 35px;
             height: 35px;
-            
+            margin: auto;
+
         }
         h2 {
             font-size: 25px;
