--- a/registr.html
+++ b/registr.html
@@ -102,8 +102,8 @@
 
                     <label for="" class="pb-2 p-0 text-white fw-bold">Formation souhaitée <span class="text-dark">choisis votre formation souhaitée</span> </label>
                     <!-- <input type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="choisis votre formation souhaitée"> -->
-                    <div class=" m-0 bg-white d-flex align-items-center row">
-                        <select name="" id=""  class="OptionInputForm border-0 p-2 mb-3 bg-transparent border-0">
+                    <div class=" m-0 p-2  bg-white d-flex align-items-center row container">
+                        <select name="" id=""  class="OptionInputForm border-0 p-0 m-0 bg-dark border-0 ">
                             <option value="" class="11">Opt1</option>
                             <option value="" class="21">Opt 2</option>
                             <option value="" class="31">Opt 3</option>
