--- a/registr.html
+++ b/registr.html
@@ -17,16 +17,16 @@
             box-sizing: border-box;
         }
         .sercle {
-            width: 28px;
-            height: 28px;
+            width: 10px;
+            height: 10px;
             border-radius: 50%;
             margin: auto;
         }
         .crclstp2 {
-            width: 35px;
-            height: 35px;
+            width: 15px;
+            height: 15px;
             margin: auto;
-
+            border-radius: 50%;
         }
         h2 {
             font-size: 25px;
@@ -48,6 +48,7 @@
         }
         .serclAnim{
             animation: progess 5s normal infinite ease;
+            border-radius: 50%;
         }
         .inscrBtn {
             background: rgb(0,0,0);
@@ -71,7 +72,7 @@
         <div class="PersonHr bg-dark vw-100 position-absolute mb-4 z-n1"></div>
 
         <div class="text-center  z-3">
-            <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-dark">
+            <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-danger">
                 <p class="sercle bg-primary fw-bold text-white  d-flex align-items-center justify-content-center  fs-5"><i class="fa-solid fa-spinner  serclAnim text-center m-0 p-0"></i></p>
             </div>
             <p class="m-0" >en cours</p>
