--- a/registr.html
+++ b/registr.html
@@ -17,8 +17,8 @@
             box-sizing: border-box;
         }
         .sercle {
-            width: 10px;
-            height: 10px;
+            width: 20px;
+            height: 20px;
             border-radius: 50%;
             margin: auto;
         }
@@ -72,15 +72,15 @@
         <div class="PersonHr bg-dark vw-100 position-absolute mb-4 z-n1"></div>
 
         <div class="text-center  z-3">
-            <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-danger">
-                <p class="sercle bg-primary fw-bold text-white  d-flex align-items-center justify-content-center  fs-5"><i class="fa-solid fa-spinner  serclAnim text-center m-0 p-0"></i></p>
-            </div>
+            <!-- <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-danger"> -->
+                <p class="sercle  bg-primary fw-bold rounded-circle text-white  d-flex align-items-center justify-content-center  "><i class="fa-solid fa-spinner  serclAnim text-center m-0 p-0"></i></p>
+            <!-- </div> -->
             <p class="m-0" >en cours</p>
         </div>
 
         <div class="text-center">
             <div class="p-1 crclstp2 rounded-circle d-flex align-items-center justify-content-center bg-dark">
-                <p class="sercle bg-success text-white fw-bold d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-check text-center m-0 p-0"></i></p>
+                <p class="sercle bg-success h-100 text-white fw-bold d-flex align-items-center justify-content-center fs-5"><i class="fa-solid fa-check   text-center m-0 p-0"></i></p>
             </div>
             <p class="m-0" >vérification</p>
         </div>
