--- a/registr.html
+++ b/registr.html
@@ -71,6 +71,7 @@
         }
         input {
             outline: 0;
+            border-radius: 0px !important; 
         }
         
 </style>
@@ -107,7 +108,7 @@
                 <h2 class="text-center my-3 mb-5">Remplissez le formulaire suivant</h2>
             <form action="" class=" row col-md-7">
                 <label for="" class="text-align-start pb-2 p-0  text-white fw-bold">Nom complet</label>
-                <input oninput="functionChekInpuVal()" type="text" name="" id="input1" class="border-0 p-2 mb-4 mb-md-4" placeholder="Entrez votre nom complet">
+                <input oninput="functionChekInpuVal()" type="text" name="" id="input1" class="border-0 p-2 mb-4 mb-md-4 " placeholder="Entrez votre nom complet">
 
                 <label for="" class="pb-2 p-0 text-capitalize  text-white fw-bold">numéro de telephone</label>
                 <input  oninput="functionChekInpuVal()" type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="Entrez votre Numéro de téléphone">
